--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,17 +15,23 @@ requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Topic :: Communications",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+    "Topic :: Internet :: WWW/HTTP :: Site Management",
+    "Topic :: Security",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Text Processing :: Filters",
+    "Topic :: Text Processing :: Linguistic",
     "Typing :: Typed",
 ]
-keywords = ["respectify", "api", "comment", "moderation", "spam", "toxicity", "dogwhistle"]
+keywords = ["respectify", "api", "comment", "moderation", "spam", "toxicity", "dogwhistle", "content-filtering", "abuse-detection", "discussion", "discourse", "civility"]
 dependencies = [
     "httpx>=0.24.0",
     "pydantic>=2.0.0",
